tests/spec/format/snapshots/slice_simple.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { [1, 2, 3] }"
---
fn test() {
  [1, 2, 3]
}
