tests/spec/format/snapshots/slice_with_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    [
      a,
      // comment before b
      b,
      c,
    ]
  }
---
fn test() {
  [
    a,
    // comment before b
    b,
    c,
  ]
}
