tests/spec/format/snapshots/standalone_comment_between_struct_fields.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Foo {
    a: int,
    // a standalone note about the missing field
    c: string,
  }
---
struct Foo {
  a: int,
  // a standalone note about the missing field
  c: string,
}
