tests/spec/format/snapshots/struct_call_empty.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { Empty {} }"
---
fn test() {
  Empty {}
}
