tests/spec/format/snapshots/struct_embedded_field.snap
---
source: tests/spec/format/mod.rs
description: "input: struct Outer {\n  embed Base,\n  embed Ref<Other>,\n  extra: int,\n}"
---
struct Outer { embed Base, embed Ref<Other>, extra: int }
