tests/spec/format/snapshots/struct_empty_with_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Empty {
    // no fields yet
  }
---
struct Empty {
  // no fields yet
}
