tests/spec/format/snapshots/struct_instantiation.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { Point { x: 1, y: 2 } }"
---
fn test() {
  Point { x: 1, y: 2 }
}
