tests/spec/format/snapshots/struct_instantiation_shorthand.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { let x = 1; let y = 2; Point { x, y } }"
---
fn test() {
  let x = 1
  let y = 2
  Point { x, y }
}
