tests/spec/format/snapshots/struct_instantiation_spread.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { Point { x: 1, ..other } }"
---
fn test() {
  Point { x: 1, ..other }
}
