tests/spec/format/snapshots/struct_instantiation_spread_with_comment.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() {
    Point {
      x: 1,
      // inherit the rest
      ..other
    }
  }
---
fn test() {
  Point {
    x: 1,
    // inherit the rest
    ..other,
  }
}
