tests/spec/format/snapshots/struct_mixed_visibility_fields.snap
---
source: tests/spec/format/mod.rs
description: "struct Config { pub name: string, secret: string, pub enabled: bool }"
---
struct Config {
  pub name: string,
  secret: string,
  pub enabled: bool,
}
