tests/spec/format/snapshots/struct_multiline_no_trailing_space.snap
---
source: tests/spec/format/mod.rs
description: |-
  struct Params {
    pub alpha: Option<Ref<big.Int>>,
    pub beta: Option<Ref<big.Int>>,
    pub gamma: Option<Ref<big.Int>>,
    pub size: int,
  }
---
struct Params {
  pub alpha: Option<Ref<big.Int>>,
  pub beta: Option<Ref<big.Int>>,
  pub gamma: Option<Ref<big.Int>>,
  pub size: int,
}
